day-10/acesso-autenticado/ingress-autenticado.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cofre-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "cofre-senhas-usuarios"
    nginx.ingress.kubernetes.io/auth-realm: "Autenticação necessária."
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  #tls:
  #### Domínio para ter a finalização da criptografia
  #- hosts:
  #  - cofre-senhas.io # SSL somente vai ser assinado se tiver domínio CNAME
  #  secretName: gupoco-senhas-tls
  rules:
  #- host: localhost # SE FOR AWS: domínio CNAME
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cofre-senhas
            port:
              number: 5000

# o ClusterIssuer (arquivo ./cert-manager/prod-issuer.yaml) é responsável por enviar uma solicitação de finalização de assinatura de encriptação. Essa solicitação leva em conta o domínio CNAME utilizado pela aplicação
